Get rid of phi_ref

--- a/examples/example_7dq4.ipynb
+++ b/examples/example_7dq4.ipynb
@@ -146,12 +146,6 @@
       " |              See THE PAPER for how the orbital frequency is\n",
       " |              computed as well as the definition of the coprecessing frame.\n",
       " |  \n",
-      " |  \n",
-      " |      phi_ref: The angle on the plane of the orbit from the line of ascending\n",
-      " |              nodes to the position of the body 1 at reference epoch. Can\n",
-      " |              also be thought of as the orbital phase at reference epoch.\n",
-      " |              Default: 0.\n",
-      " |  \n",
       " |      allow_extrap:\n",
       " |          If False, raises a warning when q > 4.1 or |chiA|,|chiB| > 0.81,\n",
       " |              and raises an error when q > 6.1 or |chiA|,|chiB| > 1.\n",
@@ -161,7 +155,7 @@
       " |  \n",
       " |  Optional PN evolution arguments:\n",
       " |  \n",
-      " |      If the omega0 option is used, the spins need to evolved from omega0\n",
+      " |      If the omega0 option is used, the spins need to be evolved from omega0\n",
       " |      until t=-100M, where the fits will be evaluated. For the late inspiral\n",
       " |      part, we use the internal spin evolution of NRSur7dq4 (also described\n",
       " |      in THE PAPER), which is very accurate. However, this surrogate is not\n",
@@ -213,17 +207,17 @@
       " |  \n",
       " |  Inertial frame for returned values:\n",
       " |  \n",
-      " |      The returned chif and vf are in the inertial frame defined as follows:\n",
-      " |      The +ve z-axis is along the orbital angular momentum at the reference\n",
-      " |      epoch. The orbital phase at the reference epoch is phi_ref. This means\n",
-      " |      that the separation vector from the lighter BH to the heavier BH is at\n",
-      " |      an azimuthal angle phi_ref from the +ve x-axis, in the orbital plane at\n",
-      " |      the reference epoch. The y-axis completes the right-handed triad.\n",
-      " |      Note that the default reference epoch corresponds to t=-100M, but\n",
-      " |      if omega0 is given the reference epoch is taken to be the time that\n",
-      " |      the orbital frequency in the coprecessing frame is equal to omega0.\n",
-      " |      This agrees with the LAL convention. See LIGO DCC document T1800226 for\n",
-      " |      the LAL frame diagram.\n",
+      " |      The returned chif/vf are in the LAL inertial frame defined as follows:\n",
+      " |          The +ve z-axis is along the orbital angular momentum at the\n",
+      " |          reference epoch. The separation vector from the lighter BH to the\n",
+      " |          heavier BH at the reference epoch is along the +ve x-axis. The\n",
+      " |          y-axis completes the right-handed triad.\n",
+      " |  \n",
+      " |          Note that the default reference epoch corresponds to t=-100M, but\n",
+      " |          if omega0 is given the reference epoch is taken to be the time at\n",
+      " |          which the orbital frequency in the coprecessing frame is equal to\n",
+      " |          omega0. This agrees with the LAL convention. See LIGO DCC document\n",
+      " |          T1800226 for the LAL frame diagram.\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      Fit7dq4\n",
@@ -352,8 +346,8 @@
       "setting __package__ to gwsurrogate.new so relative imports work\n",
       "Loaded NRSur7dq4 model\n",
       "('mf:', 0.965277363661708, 'mf_err:', 8.80235924388258e-05)\n",
-      "('chif:', array([0.11743643, 0.04541588, 0.70241925]), 'chif_err:', array([0.00051422, 0.00054966, 0.0004101 ]))\n",
-      "('vf:', array([-0.00020018, -0.00014633, -0.00212556]), 'vf_err:', array([2.82183533e-05, 2.04657129e-05, 4.97934073e-05]))\n"
+      "('chif:', array([0.12561262, 0.00868261, 0.70241925]), 'chif_err:', array([0.00051815, 0.00054596, 0.0004101 ]))\n",
+      "('vf:', array([-2.34486696e-04, -8.06331885e-05, -2.12556389e-03]), 'vf_err:', array([2.60859148e-05, 2.31224116e-05, 4.97934073e-05]))\n"
      ]
     }
    ],
@@ -370,24 +364,21 @@
     "\n",
     "#  Dimensionless orbital frequency at reference epoch (in units of rad/M)\n",
     "omega0 = 7e-3\n",
-    "\n",
-    "# orbital phase at refereence epoch\n",
-    "phi_ref = 0.3\n",
     "  \n",
     "# remnant mass and 1-sigma error estimate\n",
-    "mf, mf_err = fit.mf(q, chiA, chiB, omega0=omega0, phi_ref=phi_ref)\n",
+    "mf, mf_err = fit.mf(q, chiA, chiB, omega0=omega0)\n",
     "print(\"mf:\", mf, \"mf_err:\", mf_err)\n",
     " \n",
     "# remnant spin and 1-sigma error estimate\n",
-    "chif, chif_err = fit.chif(q, chiA, chiB, omega0=omega0, phi_ref=phi_ref)\n",
+    "chif, chif_err = fit.chif(q, chiA, chiB, omega0=omega0)\n",
     "print(\"chif:\", chif, \"chif_err:\", chif_err)\n",
     " \n",
     "# remnant recoil kick and 1-sigma error estimate\n",
-    "vf, vf_err = fit.vf(q, chiA, chiB, omega0=omega0, phi_ref=phi_ref)\n",
+    "vf, vf_err = fit.vf(q, chiA, chiB, omega0=omega0)\n",
     "print(\"vf:\", vf, \"vf_err:\", vf_err)\n",
     " \n",
     "# All of these together\n",
-    "mf, chif, vf, mf_err, chif_err, vf_err = fit.all(q, chiA, chiB, omega0=omega0, phi_ref=phi_ref)"
+    "mf, chif, vf, mf_err, chif_err, vf_err = fit.all(q, chiA, chiB, omega0=omega0)"
    ]
   },
   {
