--- a/surfinBH/data/README
+++ b/surfinBH/data/README
@@ -4,5 +4,5 @@ This directory contains the fit data. Fit data gets downloaded to this
 directory using surfinBH.DownloadData().
 
 DO NOT commit the files in this directory.
-However, make sure that this directory contains data for all fits before
-uploading a new version to pip.
+However, make sure that this directory has no data files before uploading a new
+version to pip. The required data gets downloaded automatically.
