Example notebook for NRSur7dq4EmriRemnant

--- a/examples/example_7dq4Emri.ipynb
+++ b/examples/example_7dq4Emri.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
       " |  Fit7dq4Emri(name)\n",
       " |  \n",
       " |  A class for the NRSur7dq4EmriRemnant model presented in Boschini et al.,\n",
-      " |  arxiv:[] (hereafter THE PAPER). \n",
+      " |  arxiv:[TO_BE_CHANGED] (hereafter THE PAPER). \n",
       " |  \n",
       " |  This model predicts the final mass mf and final spin chif, for the remnants \n",
       " |  of precessing binary black hole systems. \n",
@@ -105,8 +105,10 @@
       " |      # remnant spin and 1-sigma error estimate\n",
       " |      chif, chif_err = fit.chif(q, chiA, chiB, **kwargs)\n",
       " |      \n",
-      " |      # All of these together\n",
-      " |      mf, chif, mf_err, chif_err = fit.all(q, chiA, chiB, **kwargs)\n",
+      " |      # All of these together (this fit returns vf = vf_err = None)\n",
+      " |      # This shape output is needed for compatibility reason\n",
+      " |      mf, chif, vf, mf_err, chif_err, vf_err = \n",
+      " |          fit.all(q, chiA, chiB, **kwargs)\n",
       " |  \n",
       " |  The arguments for each of these call methods are as follows:\n",
       " |  Arguments:\n",
@@ -219,23 +221,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mf: 0.9996505613574366 mf_err: 3.3522761776282803e-06\n",
-      "chif: [0.49543412 0.04943227 0.31297649] chif_err: [0.00060791 0.00053788 0.00054204]\n",
-      "mf: 0.9996505613574366 mf_err: 3.3522761776282803e-06\n",
-      "chif: [0.49543412 0.04943227 0.31297649] chif_err: [0.00060791 0.00053788 0.00054204]\n"
+      "mf: 0.9573774194037301 mf_err: 0.00010600726023017525\n",
+      "chif: [0.17030307 0.04525373 0.6993492 ] chif_err: [0.00044217 0.00044061 0.0003345 ]\n",
+      "mf: 0.9573774194037301 mf_err: 0.00010600726023017525\n",
+      "chif: [0.17030307 0.04525373 0.6993492 ] chif_err: [0.00044217 0.00044061 0.0003345 ]\n",
+      "<class 'NoneType'> <class 'NoneType'>\n"
      ]
     }
    ],
    "source": [
     "# Mass ratio and component spins at reference epoch (t=-100M)\n",
-    "q = 200.4\n",
+    "q = 2.4\n",
     "chiA = [0.5, 0.05, 0.3]\n",
     "chiB = [-0.5, -0.05, 0.1]\n",
     "\n",
@@ -250,7 +253,9 @@
     "# All of these together\n",
     "mf, chif, vf, mf_err, chif_err, vf_err = fit.all(q, chiA, chiB)\n",
     "print(\"mf:\", mf, \"mf_err:\", mf_err)\n",
-    "print(\"chif:\", chif, \"chif_err:\", chif_err)"
+    "print(\"chif:\", chif, \"chif_err:\", chif_err)\n",
+    "# vf and vf_err are returned just for compatibility, they are always None\n",
+    "print(type(vf), type(vf_err))"
    ]
   },
   {
