--- a/examples/example_7dq4Emri.ipynb
+++ b/examples/example_7dq4Emri.ipynb
@@ -60,7 +60,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -73,19 +74,28 @@
       " |  Fit7dq4Emri(name)\n",
       " |  \n",
       " |  A class for the NRSur7dq4EmriRemnant model presented in Boschini et al.,\n",
-      " |  arxiv:[TO_BE_CHANGED] (hereafter THE PAPER). \n",
+      " |  arxiv:2307.03435 (hereafter THE PAPER). \n",
       " |  \n",
       " |  This model predicts the final mass mf and final spin chif, for the remnants \n",
       " |  of precessing binary black hole systems,  extending to arbitrarily large \n",
       " |  mass ratios.\n",
-      " |  The fits are done using Gaussian Process Regression (GPR) and also \n",
+      " |  The fits are done using Gaussian Process Regression (GPR) and also\n",
       " |  provide an error estimate along with the fit value.\n",
       " |  \n",
       " |  This model has been trained in the parameter space:\n",
       " |      NR: q <= 4, |chiA| <= 0.8, |chiB| <= 0.8\n",
       " |      EMRI: 100 <= q <= 1000 , |chiA| <= 1, |chiB| <= 1\n",
       " |  \n",
-      " |  It can be evaluated at arbitrary mass ratios.\n",
+      " |  But, the model can be evaluated at arbitrary mass ratios and spins.\n",
+      " |  For the remnant mass, the model uses a GPR fit at all mass ratios, which\n",
+      " |  includes an error estimate.\n",
+      " |  For the remnant spin, the GPR fit only covers mass ratios up to q=1000.\n",
+      " |  Therefore, at q<=1000, the error estimate is provided by GPR. At q >= 2000\n",
+      " |  the model simply returns the EMRI limit and the error is estimated as the\n",
+      " |  absolute difference between this value and chiA (which is the limit of chif\n",
+      " |  at q -> inf). There is a transition region (1000 < q < 2000) to smoothly\n",
+      " |  connect these two regimes, and the error estimate also has a similar\n",
+      " |  transition. See Sec. III in THE PAPER for details.\n",
       " |  \n",
       " |  =========================================================================\n",
       " |  Usage:\n",
@@ -101,10 +111,10 @@
       " |  \n",
       " |      # remnant spin and 1-sigma error estimate\n",
       " |      chif, chif_err = fit.chif(q, chiA, chiB, **kwargs)\n",
-      " |      \n",
+      " |  \n",
       " |      # All of these together (this fit returns vf = vf_err = None)\n",
       " |      # This output is needed for compatibility with the other fits\n",
-      " |      mf, chif, vf, mf_err, chif_err, vf_err = \n",
+      " |      mf, chif, vf, mf_err, chif_err, vf_err =\n",
       " |          fit.all(q, chiA, chiB, **kwargs)\n",
       " |  \n",
       " |  The arguments for each of these call methods are as follows:\n",
@@ -126,14 +136,13 @@
       " |              \\chi_y = \\chi \\cdot \\hat{L \\cross n}.\n",
       " |              These spin components are frame-independent as they are defined\n",
       " |              using vector inner products. This is equivalent to specifying\n",
-      " |              the spins in the coorbital frame at the reference epoch. \n",
-      " |              For comparable-mass binaries the reference epoch is assumed to \n",
-      " |              be at t=-100 M from the peak of the waveform, which corresponds \n",
-      " |              to 2-4 GW cycles before the peak. In the EMRI limit the \n",
-      " |              reference epoch is the ISCO (innermost stable circular orbit). \n",
-      " |              In the intermediate regime the reference epoch is a transition \n",
-      " |              between these two frames. See Sec. III in THE PAPER for \n",
-      " |              additional details.\n",
+      " |              the spins in the coorbital frame at the reference epoch.\n",
+      " |              For comparable-mass binaries (q<=6) the reference epoch is\n",
+      " |              assumed to be at t=-100 M from the peak of the waveform\n",
+      " |              amplitude. In the EMRI limit (q>=100) the reference epoch is the\n",
+      " |              ISCO (innermost stable circular orbit). In the intermediate\n",
+      " |              regime the reference epoch is a transition between these two\n",
+      " |              frames. See Sec. III in THE PAPER for additional details.\n",
       " |  \n",
       " |   Inertial frame for returned values:\n",
       " |  \n",
@@ -143,8 +152,8 @@
       " |          heavier BH at the reference epoch is along the +ve x-axis. The\n",
       " |          y-axis completes the right-handed triad.\n",
       " |  \n",
-      " |          Note that the default reference epoch corresponds to t=-100M for \n",
-      " |          comparable-mass binaries, the ISCO for EMRI binaries, and an \n",
+      " |          Note that the default reference epoch corresponds to t=-100M for\n",
+      " |          comparable-mass binaries, the ISCO for EMRI binaries, and an\n",
       " |          intemediate epoch for binaries in between the two limits.\n",
       " |          See LIGO DCC document T1800226 for the LAL frame diagram.\n",
       " |  \n",
@@ -210,7 +219,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Evaluate the fits"
    ]
