Make pytest succeed: workaround for nbconvert running from one dir up

--- a/examples/example_3dq8_RD.ipynb
+++ b/examples/example_3dq8_RD.ipynb
@@ -162,7 +162,7 @@
       " |      See _fit_evaluators.fit_7dq2.py for an example.\n",
       " |\n",
       " |  all(self, *args, **kwargs)\n",
-      " |      Evaluates fit and 1-sigma error estimate for remnant mass, spin\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant mass, spin,\n",
       " |      and QNM amplitudes.\n",
       " |      Returns:\n",
       " |          mf, chif, QNM_dict, mf_err_est, chif_err_est, QNM_err_est_dict\n",
@@ -170,7 +170,7 @@
       " |      chif and chif_err_est are only the spin magnitude.\n",
       " |\n",
       " |  vf(self, *args, **kwargs)\n",
-      " |      vf is not implemented in this model.\n",
+      " |      vf is not implemented in this model. Will return (None, None),\n",
       " |\n",
       " |  ----------------------------------------------------------------------\n",
       " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
@@ -322,7 +322,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from example_utils import qnm_from_tuple"
+    "try:\n",
+    "    # When running the notebook interactively\n",
+    "    from example_utils import qnm_from_tuple\n",
+    "except:\n",
+    "    # When pytest uses nbconvert to run the notebook, from one directory up\n",
+    "    import sys\n",
+    "    sys.path.append('./examples/')\n",
+    "    from example_utils import qnm_from_tuple"
    ]
   },
   {
@@ -472,7 +479,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h_1450 = sxs.rpdmb.load('rhOverM_SXS:BBH:1450_BondiCce_R0260_superrest.h5')"
+    "try:\n",
+    "    # When running the notebook interactively\n",
+    "    h_1450 = sxs.rpdmb.load('rhOverM_SXS:BBH:1450_BondiCce_R0260_superrest.h5')\n",
+    "except:\n",
+    "    # When pytest uses nbconvert to run the notebook, from one directory up\n",
+    "    h_1450 = sxs.rpdmb.load('examples/rhOverM_SXS:BBH:1450_BondiCce_R0260_superrest.h5')"
    ]
   },
   {
@@ -593,13 +605,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
