added arXiv number for BMS surrogate

--- a/examples/example_3dq8BMS.ipynb
+++ b/examples/example_3dq8BMS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
       " |  Fit3dq8BMS(name)\n",
       " |\n",
       " |  A class for the NRSur3dq8BMSRemnant model presented in Da Re et al.,\n",
-      " |  arxiv:????.?????. This model is referred to as surfinBH3dq8BMS in the paper.\n",
+      " |  arXiv:2503.09569.\n",
       " |\n",
       " |  This model predicts the supertransation modes up to ell = 8 and the\n",
       " |  3 components of the boost velocity of the BMS transformation from the\n",
@@ -263,7 +263,7 @@
     "# Loading the PN (inspiral) and superrest (remnant black hole frame) waveforms. \n",
     "# Both waveforms are rotated after the frame fix so that they have the black holes \n",
     "# aligned with the x axis with the hevier one\n",
-    "# on the positive x-axis as explained in arxiv:?????????\n",
+    "# on the positive x-axis as explained in arXiv:2503.09569\n",
     "try:\n",
     "    # When running the notebook interactively\n",
     "    h_PN_al = MT_to_WM(WM_to_MT(sxs.load('rhOverM_SXS:BBH:1450_BondiCce_R0260_PN_aligned.h5')), dataType = scri.h)\n",
